[tool.poetry]
name = "hackerrank-problem-solutions"
version = "0.1.0"
description = ""
authors = ["aitoolkit"]
readme = "README.md"
packages = [
    { include = "topics.*" }
]

[tool.poetry.dependencies]
python = "^3.9"
topics = { path = "./topics", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
