[tool.poetry]
name = "hackerrank-problem-solutions"
version = "0.1.0"
description = ""
authors = ["aitoolkit"]
readme = "README.md"
packages = [
    { include = "topics" }
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.2.2"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
